backup ; hints